--- a/music/styles.css
+++ b/music/styles.css
@@ -41,6 +41,28 @@ h1 {
   font-size: 50px;
 }
 
+.container {
+  z-index: 1002;
+  margin: 0 auto;
+  padding: 0 0px;
+}
+
+.header {
+  z-index: 1002;
+  width: 100%;
+  box-shadow: 0 5px 10px -6px rgba(0,0,0,.1);
+  font-size: 20px;
+  max-width: 1600px;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+  display: block;
+  font-weight: 500;
+  margin: 0px;
+}
+
 
 
 /* レスポンシブデザイン設定：画面幅に応じて列数を調整 */
